@@ -1,6 +1,6 @@
 Package: spatstat.explore
-Version: 3.1-0.017
-Date: 2023-04-02
+Version: 3.1-0.018
+Date: 2023-04-05
 Title: Exploratory Data Analysis for the 'spatstat' Family
 Authors@R: c(person("Adrian", "Baddeley", 
                     role = c("aut", "cre", "cph"),
